Set the default allowlist from env vars, making this all easier to stand up for other sites, too

--- a/.github/workflows/mozorg-scheduled-check.yaml
+++ b/.github/workflows/mozorg-scheduled-check.yaml
@@ -10,6 +10,7 @@ env:
   MOZORG_CDN_HOSTNAME: ${{ secrets.MOZORG_CDN_HOSTNAME }}
   MOZORG_US_ORIGIN_HOSTNAME: ${{ secrets.MOZORG_US_ORIGIN_HOSTNAME }}
   MOZORG_EU_ORIGIN_HOSTNAME: ${{ secrets.MOZORG_EU_ORIGIN_HOSTNAME }}
+  ALLOWLIST_FILEPATH: data/allowlist-mozorg.yaml
 
 jobs:
   run_on_cdn:
