--- a/.env.dev
+++ b/.env.dev
@@ -1,3 +1,4 @@
 MOZORG_CDN_HOSTNAME=add.me
 MOZORG_US_ORIGIN_HOSTNAME=add.me.too
 MOZORG_EU_ORIGIN_HOSTNAME=add.me.as.well
+ALLOWLIST_FILEPATH=add.me.eg.data/allowlist-mozorg.yaml
