--- a/requirements.in
+++ b/requirements.in
@@ -1,13 +1,15 @@
 # main reqs
-beautifulsoup4==4.10.0
-click==8.0.3
+beautifulsoup4==4.11.1
+click==8.1.3
+django==4.1.3
 html5lib==1.1
 lxml==4.9.1
 pyaml-env==1.2.0
-requests==2.27.1
-sentry-sdk==1.5.4
-slack_sdk==3.14.1
+requests==2.28.1
+ruamel.yaml==0.17.21
+sentry-sdk==1.11.1
+slack_sdk==3.19.4
 
 # test reqs
-pytest==7.0.1
-pytest-cov==3.0.0
+pytest==7.2.0
+pytest-cov==4.0.0
