Update Dev env example to avoid accidentally using real domain names in dummy values

--- a/.env.dev
+++ b/.env.dev
@@ -1,4 +1,4 @@
-MOZORG_CDN_HOSTNAME=add.me
-MOZORG_US_ORIGIN_HOSTNAME=add.me.too
-MOZORG_EU_ORIGIN_HOSTNAME=add.me.as.well
-ALLOWLIST_FILEPATH=add.me.eg.data/allowlist-mozorg.yaml
+MOZORG_CDN_HOSTNAME=add.me.please
+MOZORG_US_ORIGIN_HOSTNAME=add.me.too.please
+MOZORG_EU_ORIGIN_HOSTNAME=add.me.as.well.please
+ALLOWLIST_FILEPATH=add.me.please.eg.data/allowlist-mozorg.yaml
