Examine unexpected URLs and either open a PR or an Issue (#86)
* Refactor allowlist to avoid inheritance pattern in YAML + use env vars in config

.env.dev lists the env vars you need to have available

* Experiment with templating the hostname, so we can pull each from env vars

* Minor output improvement

* Rename allowlist to show it's for Bedrock in Mozorg Mode

* Rename GH Action to clarify it's for Mozorg Mode

* Set the default allowlist from env vars, making this all easier to stand up for other sites, too

* Update allowlist comments - stale

* Update example .env file for local dev

* Expand post-check actions to open issues or PRs depending on the URLs discovered

If a URL can just be added to the allowlist, we raise a PR that adds it/them
to the allowlist and raise a PR via the github cli, which is available in a
GH Action context.

If a URL is malformed and so can't be safely added to the list, we open an
issue to investigate it.

* Add a content-based fingerpint to the PR body and refuse to generate a new PR if one for the same content exists

* Reduce noise in output

* Fix fingerprint generation

* Drop backticks in PR template to stop blow-up

* Push the update branch before opening the PR, to mute interactive prompt

* Check if an issue exists for a problematic URL before opening a new one

eg

$./bin/handle_output.py
Not opening a new PR - existing one for same unexpected URLs exists already
Not opening a new Issue - existing one for 'brokenlinktwo' exists already
Not opening a new Issue - existing one for '(broken-link)' exists already

* Stablise fingerprint generation: sets have no guaranteed order

* Capture output of GH interactions so we can show URLs of new Issues and PRs

* Update README to reflect automatic PR creation

* Remove 'bug' label from auto-generated PR -- incorrect

* Update Dev env example to avoid accidentally using real domain names in dummy values

* Move PR and Issue 

--- a/.github/workflows/mozorg-scheduled-check.yaml
+++ b/.github/workflows/mozorg-scheduled-check.yaml
@@ -7,12 +7,16 @@ on:
 env:
   SENTRY_DSN: https://45ad5d426da7480081831c053ca02cac@o1069899.ingest.sentry.io/6249535
   SLACK_NOTIFICATION_WEBHOOK_URL: ${{ secrets.SLACK_NOTIFICATION_WEBHOOK_URL }}
+  MOZORG_CDN_HOSTNAME: ${{ secrets.MOZORG_CDN_HOSTNAME }}
+  MOZORG_US_ORIGIN_HOSTNAME: ${{ secrets.MOZORG_US_ORIGIN_HOSTNAME }}
+  MOZORG_EU_ORIGIN_HOSTNAME: ${{ secrets.MOZORG_EU_ORIGIN_HOSTNAME }}
+  ALLOWLIST_FILEPATH: data/allowlist-mozorg.yaml
 
 jobs:
   run_on_cdn:
     strategy:
       matrix:
-        batch: ["1:4", "2:4", "3:4", "4:4"]
+        batch: ["1:5", "2:5", "3:5", "4:5", "5:5"]
     runs-on: ubuntu-latest
     name: Check main CDN - batch ${{ matrix.batch }}
     steps:
@@ -25,7 +29,7 @@ jobs:
       - name: Run checker
         run: >
           python bin/run_checks.py
-          --sitemap-url=https://www.mozilla.org/sitemap.xml
+          --sitemap-url="https://${{ secrets.MOZORG_CDN_HOSTNAME }}/sitemap.xml"
           --batch="${{ matrix.batch }}"
       - name: Upload output files
         uses: actions/upload-artifact@v3
@@ -36,7 +40,7 @@ jobs:
   run_on_us_origin:
     strategy:
       matrix:
-        batch: ["1:4", "2:4", "3:4", "4:4"]
+        batch: ["1:5", "2:5", "3:5", "4:5", "5:5"]
     runs-on: ubuntu-latest
     name: Check US origin server - batch ${{ matrix.batch }}
     steps:
@@ -49,7 +53,7 @@ jobs:
       - name: Run checker
         run: >
           python bin/run_checks.py
-          --sitemap-url=https://bedrock-prod.gcp.moz.works/sitemap.xml
+          --sitemap-url="https://${{ secrets.MOZORG_US_ORIGIN_HOSTNAME }}/sitemap.xml"
           --maintain-hostname
           --batch="${{ matrix.batch }}"
       - name: Upload output files
@@ -61,7 +65,7 @@ jobs:
   run_on_eu_origin:
     strategy:
       matrix:
-        batch: ["1:4", "2:4", "3:4", "4:4"]
+        batch: ["1:6", "2:6", "3:6", "4:6", "5:6", "6:6"]
     runs-on: ubuntu-latest
     name: Check EU origin server - batch ${{ matrix.batch }}
     steps:
@@ -74,7 +78,7 @@ jobs:
       - name: Run checker
         run: >
           python bin/run_checks.py
-          --sitemap-url=https://bedrock.prod.fr.moz.works/sitemap.xml
+          --sitemap-url="https://${{ secrets.MOZORG_EU_ORIGIN_HOSTNAME }}/sitemap.xml"
           --maintain-hostname
           --batch="${{ matrix.batch }}"
       - name: Upload output files
@@ -103,4 +107,4 @@ jobs:
           name: scan-results
           path: output
       - name: Fail the job if scan-results exists
-        run: python bin/check_for_output.py
+        run: python bin/handle_output.py
