Make sure GH token is available to the gh cli tool

--- a/.github/workflows/mozorg-scheduled-check.yaml
+++ b/.github/workflows/mozorg-scheduled-check.yaml
@@ -108,3 +108,5 @@ jobs:
           path: output
       - name: Fail the job if scan-results exists
         run: python bin/handle_output.py
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
