Do not run checks on PRs made by dependabot

--- a/.github/workflows/mozorg-scheduled-check.yaml
+++ b/.github/workflows/mozorg-scheduled-check.yaml
@@ -1,6 +1,8 @@
-name: "Scheduled checks"
+name: "Site scanning"
 on:
   push:
+    branches-ignore:
+      - "dependabot/**"
   schedule:
     - cron: "32 2,14 * * *" # 02:32 UTC and 14:32 every day
 
