--- a/.github/workflows/mozorg-scheduled-check.yaml
+++ b/.github/workflows/mozorg-scheduled-check.yaml
@@ -19,7 +19,7 @@ jobs:
   run_on_cdn:
     strategy:
       matrix:
-        batch: ["1:5", "2:5", "3:5", "4:5", "5:5"]
+        batch: ["1:6", "2:6", "3:6", "4:6", "5:6", "6:6"]
     runs-on: ubuntu-latest
     name: Check main CDN - batch ${{ matrix.batch }}
     steps:
@@ -43,7 +43,7 @@ jobs:
   run_on_us_origin:
     strategy:
       matrix:
-        batch: ["1:5", "2:5", "3:5", "4:5", "5:5"]
+        batch: ["1:6", "2:6", "3:6", "4:6", "5:6", "6:6"]
     runs-on: ubuntu-latest
     name: Check US origin server - batch ${{ matrix.batch }}
     steps:
@@ -68,7 +68,7 @@ jobs:
   run_on_eu_origin:
     strategy:
       matrix:
-        batch: ["1:6", "2:6", "3:6", "4:6", "5:6", "6:6"]
+        batch: ["1:8", "2:8", "3:8", "4:8", "5:8", "6:8", "7:8", "8:8"]
     runs-on: ubuntu-latest
     name: Check EU origin server - batch ${{ matrix.batch }}
     steps:
