--- a/.github/workflows/mozorg-scheduled-check.yaml
+++ b/.github/workflows/mozorg-scheduled-check.yaml
@@ -1,8 +1,6 @@
 name: "Site scanning"
 on:
-  push:
-    branches-ignore:
-      - "dependabot/**"
+  workflow_dispatch:
   schedule:
     - cron: "32 2,14 * * *" # 02:32 UTC and 14:32 every day
 
