Refactor internals and add support for a list of non-sitemap URLs to check (#213)
* Readme update

* Run GHA on schedule or manual trigger, never push

* Support cacheing HTML page content, to make subsequent checks faster.

* Sweep through with some helpful renaming, ahead of extending

* Expand checks to script and link nodes too - bugfix

* Naming clarification

* Dependency bump

* Add support for an optional list of non-sitemap URLs to also check

* Remove nightly RSS feed from extra urls. Will get its own dedicated test

--- a/.github/workflows/mozorg-scheduled-check.yaml
+++ b/.github/workflows/mozorg-scheduled-check.yaml
@@ -1,8 +1,6 @@
 name: "Site scanning"
 on:
-  push:
-    branches-ignore:
-      - "dependabot/**"
+  workflow_dispatch:
   schedule:
     - cron: "32 2,14 * * *" # 02:32 UTC and 14:32 every day
 
@@ -14,6 +12,7 @@ env:
   MOZORG_EU_ORIGIN_HOSTNAME: ${{ secrets.MOZORG_EU_ORIGIN_HOSTNAME }}
   MEAO_IDENTITY_EMAIL: ${{ secrets.MEAO_IDENTITY_EMAIL }}
   ALLOWLIST_FILEPATH: data/allowlist-mozorg.yaml
+  EXTRA_URLS_FILEPATH: data/extra-urls-mozorg.yaml
 
 jobs:
   run_on_cdn:
