--- a/requirements.in
+++ b/requirements.in
@@ -3,6 +3,7 @@ beautifulsoup4==4.12.2
 click==8.1.3
 django==4.2.1
 html5lib==1.1
+feedparser==6.0.10
 lxml==4.9.2
 pyaml-env==1.2.1
 requests==2.31.0
