--- a/.github/workflows/mozorg-feed-check.yaml
+++ b/.github/workflows/mozorg-feed-check.yaml
@@ -20,20 +20,23 @@ jobs:
       - name: Install requirements
         run: pip install -r requirements.txt
       - name: Check main CDN feeds
+        id: cdn
         if: always()
         run: >
           python bin/validate_feeds.py
           --hostname="${{ env.MOZORG_CDN_HOSTNAME }}"
       - name: "Check US origin feeds"
+        id: us_origin
         if: always()
         run: >
           python bin/validate_feeds.py
           --hostname="${{ env.MOZORG_US_ORIGIN_HOSTNAME }}"
       - name: "Check EU origin feeds"
+        id: eu_origin
         if: always()
         run: >
           python bin/validate_feeds.py
           --hostname="${{ env.MOZORG_EU_ORIGIN_HOSTNAME }}"
-      - name: Check for failures
-        if: steps.*.status == 'failure'
+      - name: Report on failures
+        if: steps.cdn.outcome == 'failure' || steps.us_origin.outcome == 'failure' || steps.eu_origin.outcome == 'failure'
         run: exit 1
