Add support for checking consistenct of geo code on CDN-served pages
Squashed commits:

No need to set the git user as a global thing.

This will avoid messing up local git config when developing/testing locally

Make _get_output_path less opinionated about that path

Rename main link-checker workflow

Support dumping the cache of pages from main site scan to disk, ready to export as an artifact

Rename site-scanning output-checking script because we're adding more behaviour

Add initial geo-code checking script, using pages from dumped HTML cache

Rename util to not have a private-like name, because it's intended to be imported easily

Bump requirements

Trigger a geo-code-scanning workflow from the main site-scanning workflow

The geo-code scan needs to use the cached pages dumped to an artifact
we need to run the full site scan first. (In the future we might refactor this
so that the page grabbing is a standalone task before all actual checks, but
this would make the cache considerably larger.)

Add MPL2.0 header to all other YAML files

Fix missing f-string prefix

Fix name of artifact to download in geo checks

Use ping_slack util throughout the project

Bump ruamel-yaml

All pushes to main to run the site checker main scan

Refactor CDN geo check workflow to use the workflow_run event, so that it can access the artifacts of the site scan

Add helpful output; fix facepalm bug

Add early check for absence of HTML docs from the cache

Ensure the shared artifact isn't unzipped into the base workspace dir

Hunt the right filename - need to line up where we unzip to and read from

Add Slack credentials as env vars for new workflows that need them

Make it easier to say which page(s) are tripping the data-country-code alarm

Add retention limits to artifacts

Resolves #226

Improve Slack message significance

Fix BeautifulSoup parser warning (until html5lib is no longer, that is)

Allow a very small number of pages to not contain the geo code

Fixup incorrect filenam

--- a/.github/workflows/mozorg-feed-check.yaml
+++ b/.github/workflows/mozorg-feed-check.yaml
@@ -1,3 +1,7 @@
+# This Source Code Form is subject to the terms of the Mozilla Public
+# License, v. 2.0. If a copy of the MPL was not distributed with this
+# file, You can obtain one at https://mozilla.org/MPL/2.0/.
+
 name: "RSS/Atom feed checking"
 on:
   workflow_dispatch:
@@ -8,6 +12,7 @@ env:
   MOZORG_CDN_HOSTNAME: ${{ secrets.MOZORG_CDN_HOSTNAME }}
   MOZORG_US_ORIGIN_HOSTNAME: ${{ secrets.MOZORG_US_ORIGIN_HOSTNAME }}
   MOZORG_EU_ORIGIN_HOSTNAME: ${{ secrets.MOZORG_EU_ORIGIN_HOSTNAME }}
+  SLACK_NOTIFICATION_WEBHOOK_URL: ${{ secrets.SLACK_NOTIFICATION_WEBHOOK_URL }}
 
 jobs:
   run_checks:
