--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,3 +1,7 @@
+# This Source Code Form is subject to the terms of the Mozilla Public
+# License, v. 2.0. If a copy of the MPL was not distributed with this
+# file, You can obtain one at https://mozilla.org/MPL/2.0/.
+
 # Global excludes, override per repo below if different excludes required.
 # exclude: >
 #   (?x)^(
@@ -20,6 +24,11 @@ repos:
           - "|#|"
       - id: insert-license
         files: \.sh$
+        args:
+          - --license-filepath
+          - license_header/mpl2_header.txt
+      - id: insert-license
+        files: \.yaml$
         args:
           - --license-filepath
           - license_header/mpl2_header.txt
