--- a/data/extra-urls-mozorg.yaml
+++ b/data/extra-urls-mozorg.yaml
@@ -1,3 +1,7 @@
+# This Source Code Form is subject to the terms of the Mozilla Public
+# License, v. 2.0. If a copy of the MPL was not distributed with this
+# file, You can obtain one at https://mozilla.org/MPL/2.0/.
+
 # URLs which won't be discovered via the sitemap, but which we want to check anyway
 
 # This list is drawn from the NOINDEX_URLS setting in Bedrock:
