Rename main link-checker workflow

--- a/.github/workflows/mozorg-site-scanning.yaml
+++ b/.github/workflows/mozorg-site-scanning.yaml
@@ -1,5 +1,9 @@
-name: "Outbound link scanning"
+name: "Site scanning"
 on:
+  push:
+    branches-ignore:
+      - main
+      - "dependabot/**"
   workflow_dispatch:
   schedule:
     - cron: "32 2,14 * * *" # 02:32 UTC and 14:32 every day
