--- a/.github/workflows/mozorg-site-scanning.yaml
+++ b/.github/workflows/mozorg-site-scanning.yaml
@@ -114,6 +114,6 @@ jobs:
           name: scan-results
           path: output
       - name: Fail the job if scan-results exists
-        run: python bin/handle_output.py
+        run: python bin/handle_site_scan_output.py
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
