Fix name of artifact to download in geo checks

--- a/.github/workflows/mozorg-cdn-geo-code-check.yaml
+++ b/.github/workflows/mozorg-cdn-geo-code-check.yaml
@@ -23,7 +23,7 @@ jobs:
         id: download-page-cache
         uses: actions/download-artifact@v3
         with:
-          name: page_cache
+          name: html-cache
           path: page_cache
       - name: Install requirements
         run: pip install -r requirements.txt
