--- a/requirements.in
+++ b/requirements.in
@@ -1,11 +1,12 @@
 # main reqs
 beautifulsoup4==4.12.2
-click==8.1.4
+click==8.1.5
 django==4.2.3
 html5lib==1.1
 feedparser==6.0.10
-lxml==4.9.2
+lxml==4.9.3
 pyaml-env==1.2.1
+PyYAML==6.0.1  # https://github.com/yaml/pyyaml/issues/724
 requests==2.31.0
 ruamel.yaml==0.17.32
 sentry-sdk==1.28.0
