Refactor site scanning to handle breaking change with actions/upload-artifact
The files must now have unique names, and will no longer be automatically
munged into a single archive

--- a/.github/workflows/mozorg-site-scanning.yaml
+++ b/.github/workflows/mozorg-site-scanning.yaml
@@ -45,15 +45,15 @@ jobs:
           --batch="${{ matrix.batch }}"
           --export-cache
       - name: Upload scan output files
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
-          name: scan-results
+          name: scan-results-${{ matrix.batch }}-CDN
           path: output
           retention-days: 15
       - name: Upload page-cache
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
-          name: html-cache
+          name: html-cache-${{ matrix.batch }}
           path: page_cache
           retention-days: 5
 
@@ -77,10 +77,11 @@ jobs:
           --maintain-hostname
           --batch="${{ matrix.batch }}"
       - name: Upload scan output files
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
-          name: scan-results
+          name: scan-results-${{ matrix.batch }}-US-origin
           path: output
+          retention-days: 15
 
   run_on_eu_origin:
     strategy:
@@ -102,10 +103,11 @@ jobs:
           --maintain-hostname
           --batch="${{ matrix.batch }}"
       - name: Upload scan output files
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
-          name: scan-results
+          name: scan-results-${{ matrix.batch }}-EU-origin
           path: output
+          retention-days: 15
 
   alert_if_report_files_exist:
     runs-on: ubuntu-latest
@@ -120,13 +122,12 @@ jobs:
           python-version: "3.10"
       - name: Install requirements
         run: pip install -r requirements.txt
-      - name: Download artifacts, if they exist
-        id: download-scan-results
-        uses: actions/download-artifact@v3
+      - name: Download all artifacts, if they exist
+        uses: actions/download-artifact@v4
         with:
-          name: scan-results
           path: output
-      - name: Fail the job if scan-results exists
+          merge-multiple: true
+      - name: Handle the scan results
         run: python bin/handle_site_scan_output.py
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
