--- a/.github/workflows/mozorg-site-scanning.yaml
+++ b/.github/workflows/mozorg-site-scanning.yaml
@@ -28,7 +28,7 @@ jobs:
   run_on_cdn:
     strategy:
       matrix:
-        batch: ["1:8", "2:8", "3:8", "4:8", "5:8", "6:8", "7:8", "8:8"]
+        batch: ["1_8", "2_8", "3_8", "4_8", "5_8", "6_8", "7_8", "8_8"]
     runs-on: ubuntu-latest
     name: Check main CDN - batch ${{ matrix.batch }}
     steps:
@@ -60,7 +60,7 @@ jobs:
   run_on_us_origin:
     strategy:
       matrix:
-        batch: ["1:8", "2:8", "3:8", "4:8", "5:8", "6:8", "7:8", "8:8"]
+        batch: ["1_8", "2_8", "3_8", "4_8", "5_8", "6_8", "7_8", "8_8"]
     runs-on: ubuntu-latest
     name: Check US origin server - batch ${{ matrix.batch }}
     steps:
@@ -86,7 +86,7 @@ jobs:
   run_on_eu_origin:
     strategy:
       matrix:
-        batch: ["1:8", "2:8", "3:8", "4:8", "5:8", "6:8", "7:8", "8:8"]
+        batch: ["1_8", "2_8", "3_8", "4_8", "5_8", "6_8", "7_8", "8_8"]
     runs-on: ubuntu-latest
     name: Check EU origin server - batch ${{ matrix.batch }}
     steps:
