Fix expansion of multiple zip files in page cache

--- a/.github/workflows/mozorg-cdn-geo-code-check.yaml
+++ b/.github/workflows/mozorg-cdn-geo-code-check.yaml
@@ -57,7 +57,7 @@ jobs:
       - name: Unzip page cache
         run: |
           cd page_cache
-          unzip -o html-cache.zip
+          unzip -o '*.zip'
           cd ..
           ls -la page_cache/
       - name: Install requirements
