--- a/.github/workflows/mozorg-cdn-geo-code-check.yaml
+++ b/.github/workflows/mozorg-cdn-geo-code-check.yaml
@@ -28,32 +28,32 @@ jobs:
         uses: actions/github-script@v7
         with:
           script: |
-            // get the artifacts from the GH API
+            console.log("Getting all artifacts");
             let allArtifacts = await github.rest.actions.listWorkflowRunArtifacts({
                owner: context.repo.owner,
                repo: context.repo.repo,
                run_id: context.payload.workflow_run.id,
             });
 
-            // filter to just the ones we care about
+            console.log("Filtering to the ones we care about here");
             let matchedArtifacts = allArtifacts.data.artifacts.filter((artifact) => {
-              return artifact.name.includes("html-cache")
+              return artifact.name.includes("html-cache");
             });
 
-            // download the artifact files
-            matchedArtifacts.map(
-              (artifact) => {
-                let download = await github.rest.actions.downloadArtifact({
-                  owner: context.repo.owner,
-                  repo: context.repo.repo,
-                  artifact_id: matchArtifact.id,
-                  archive_format: 'zip',
-                });
-                let fs = require('fs');
-                // ${process.env.GITHUB_WORKSPACE}/page_cache already exists because it's in the repo
-                fs.writeFileSync(`${process.env.GITHUB_WORKSPACE}/page_cache/html-cache.zip`, Buffer.from(download.data));
-              }
-            );
+            for (let i=0; i < matchedArtifacts.length; i++){
+              artifact = matchedArtifacts[i];
+              console.log("Downloading artifact", artifact);
+              let download = await github.rest.actions.downloadArtifact({
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                artifact_id: artifact.id,
+                archive_format: 'zip',
+              });
+              let fs = require('fs');
+              // ${process.env.GITHUB_WORKSPACE}/page_cache already exists because it's in the repo
+              fs.writeFileSync(`${process.env.GITHUB_WORKSPACE}/page_cache/html-cache_${i}.zip`, Buffer.from(download.data));
+              console.log("Done");
+            };
       - name: Unzip page cache
         run: |
           cd page_cache
